# robowflex_resources

./: CMakeLists.txt  LICENSE  README.md  baxter.yml  cob4.yml  fetch.yml  package.xml  panda.yml  shadowhand.yml  ur5_robotiq85.yml  ur5_robotiq85_small_table.yml  ur5_robotiq85_table.yml  yumi.yml
baxter/config/: baxter.srdf  kinematics.yaml  ompl_planning.yaml
baxter/urdf/: baxter.urdf.xacro  left_end_effector.urdf.xacro  right_end_effector.urdf.xacro
cob/config/: cob4-8.srdf  ompl_planning.yaml
cob/robots/: cob4-8.urdf.xacro  common.xacro  properties.urdf.xacro
fetch/config/: kinematics.yaml
fetch/robots/: fetch.urdf  freight.urdf
objects/: bookshelf.dae
panda/config/: ompl_planning.yaml  panda_arm.srdf.xacro  panda_arm_hand.srdf.xacro
panda/urdf/: hand.xacro  panda_arm.urdf.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro
scripts/: blender_to_scene.py  run_blender_to_scene.py
shadowhand/config/: joint_limits.yaml  kinematics.yaml  kuka_shadowhand.srdf  kuka_shadowhand.srdf.depr  ompl_planning.yaml  shadowhand.srdf
shadowhand/poses/: grasp.yml
shadowhand/urdf/: kuka_shadowhand.urdf  kuka_shadowhand.urdf.original  shadowhand.urdf
stretch/config/: fetch_pick.yml  kinematics.yaml  stretch_description.srdf  stretch_path.yml  stretch_pick.yml
stretch/urdf/: stretch_aruco.xacro  stretch_description.xacro  stretch_dry_erase_marker.xacro  stretch_gripper.xacro  stretch_gripper_with_puller.xacro  stretch_laser_range_finder.xacro  stretch_main.xacro  stretch_respeaker.xacro  xacro_to_urdf.sh
ur/robots/: ur5_robotiq_robot_limited.urdf.xacro  (+3 more)
(+59 files in other folders)
