<?xml version="1.0"?>
<package format="2">
  <name>robowflex_resources</name>
  <version>0.0.1</version>
  <description>Collection of resource files (object meshes, robot descriptions, etc.) used throughout Robowflex.</description>
  <maintainer email="zak@rice.edu">Zachary Kingston</maintainer>
  <author email="zak@rice.edu">Zachary Kingston</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
